Создал новую ветку, чтобы протестить предиктовость слов

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,17 @@
             <meta-data android:name="android.view.im"
                 android:resource="@xml/method"/>
         </service>
-
+        <service
+            android:name="com.example.keyboard.spellChecker.spellCheckerService"
+            android:exported="true"
+            android:label="Spell Checker"
+            android:permission="android.permission.BIND_TEXT_SERVICE">
+            <intent-filter>
+                <action android:name="android.service.textservice.SpellCheckerService" />
+            </intent-filter>
+            <meta-data
+                android:name="android.text_service"
+                android:resource="@xml/spellchecker" />
+        </service>
     </application>
-
 </manifest>
